# hdx-scraper-acled

./: .coveragerc  .travis.yml  CLAUDE.md  README.md  README.rst  acled.py  acled_africa.py  collect.py  crontab  docker-compose.yml  hatch.toml  pyproject.toml  register.py  requirements-test.txt  requirements.txt  ruff.toml  run.py  run.sh  scheduler.py  test-requirements.txt  venv
.config/: ruff.toml
.github/workflows/: build.yml  publish.yaml  run-python-script.yaml
collector/: acled_africa.py  acled_africa_dynamic.py  acled_africa_static.py  enricher.py  parser.py  register.py
collector/core/: dataset.py  gallery_item.py  resource.py
collector/utilities/: item.py  load.py
config/: config.json  hdx_configuration.yml  hdx_dataset_static.yml  hdx_gallery_static.yml  hdx_resource_view_static.yml  hdx_showcase_static.yml  project_configuration.yml  scraper_configuration.yml
hdx/: acled_africa_dynamic.py  acled_africa_static.py  configuration.py  register.py
hdx/collector/: scraperwiki.py  simple.py
hdx/data/: dataset.py  galleryitem.py  hdxobject.py  resource.py
hdx/utilities/: dictionary.py
tests/: conftest.py  test_acled.py  test_acled_africa.py  test_acled_africa_dynamic.py
tests/config/: collector_configuration.yml  hdx_dataset_static.yml  project_configuration.yml  scraper_configuration.yml
tests/fixtures/: conflict_events_and_fatalities.csv  conflict_events_and_fatalities_1995-1999.csv  conflict_events_and_fatalities_2025-2029.csv  hdx_hapi_conflict_event_global_1995-1999.csv  hdx_hapi_conflict_event_global_1997.csv  (+2 more)
(+17 files in other folders)
